Add Check or Uncheck Feature

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,18 +29,33 @@
                 CanUserDeleteRows="False"
                 AutoGenerateColumns="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="3*"/>
-                    <DataGridTextColumn Header="Dexcription"  Binding="{Binding Description}" Width="7*"/>
+                    <DataGridCheckBoxColumn Header="Status" Binding="{Binding IsCompleted, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="2*"/>
+                    <DataGridTextColumn Header="Title" Binding="{Binding Title, UpdateSourceTrigger=PropertyChanged}" Width="3*"/>
+                    <DataGridTextColumn Header="Dexcription"  Binding="{Binding Description, UpdateSourceTrigger=PropertyChanged}" Width="7*"/>
                 </DataGrid.Columns>
                 
                 
             </DataGrid>
 
             <StackPanel Grid.Column="1">
+               
                 <Label Content="Title"/>
                 <TextBox Margin="5,0,5,15" Text="{Binding SelectedItem.Title,UpdateSourceTrigger=PropertyChanged}"/>
                 <Label Content="Description"/>
                 <TextBox Margin="5,0,5,15" Text="{Binding SelectedItem.Description,UpdateSourceTrigger=PropertyChanged}"/>
+                <Label Content="Status"/>
+                <TextBox Margin="5,0,5,15">
+                    <TextBox.Style>
+                        <Style TargetType="TextBox">
+                            <Setter Property="Text" Value="Not Completed"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding SelectedItem.IsCompleted, UpdateSourceTrigger=PropertyChanged}" Value="True">
+                                    <Setter Property="Text" Value="Completed"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
             </StackPanel>
         </Grid>
 
